name:                quantum-random-numbers
version:             0.5.0.0
synopsis:            Retrieve, store and manage real quantum random numbers.

description:         Retrieve, store, manage and visualize real quantum random numbers
                     obtained by measuring vacuum fluctuations of the electromagnetic field
                     and served by Australian National University. The functionality is
                     provided both by an executable program `qrn` and a haskell module
                     "Quantum.Random".
                     .

                     The package is to ensure QRNs are promptly available for your application
                     by keeping a sufficient number locally. When they are depleted to a
                     specified level, new QRN data are downloaded concurrently over SSL. It
                     can be configured by specifying the minimum store size (below which more
                     data are retrieved) the target store size (the size of the store after
                     retrieval) and the default display style.
                     .

                     For more information on the API service on which this package is based,
                     visit the ANU QRN webpage at <http://qrng.anu.edu.au/>.

homepage:            http://github.com/BlackBrane/quantum-random-numbers/
license:             MIT
license-file:        LICENSE
author:              Cliff Harvey
maintainer:          cs.hbar+hs@gmail.com
copyright:           2016
category:            Scientific
build-type:          Simple

cabal-version:       >=1.10

data-files:          qrn_data/qrn_store.bin,
                     qrn_data/qrn_settings.json

extra-source-files:  README.md

source-repository head
  type:     git
  location: git://github.com/BlackBrane/quantum-random-numbers.git

library
  hs-source-dirs:      src-lib

  build-depends:       base          >=4.8  && <4.10,
                       ansigraph     >=0.2  && <0.3,
                       aeson         >=0.8  && <0.12,
                       text          >=1.2  && <1.3,
                       regex-posix   >=0.9  && <1.0,
                       bytestring    >=0.10 && <0.11,
                       http-conduit  >=2.1  && <2.2,
                       ansi-terminal >=0.6  && <0.7,
                       terminal-size >=0.3  && <0.4,
                       directory     >=1.2  && <1.3


  exposed-modules:     Quantum.Random,
                       Quantum.Random.Exceptions,
                       Quantum.Random.ANU,
                       Quantum.Random.Display,
                       Quantum.Random.Store


  other-modules:       Quantum.Random.Codec,
                       Quantum.Random.Mutex,
                       Paths_quantum_random_numbers

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -fno-warn-unused-do-bind

executable qrn
  hs-source-dirs:      src-ex

  main-is:             Main.hs

  build-depends:       base          >=4.8 && <4.10,
                       haskeline     >=0.7 && <0.8,
                       mtl           >=2.2 && <2.3,
                       quantum-random-numbers

  default-language:    Haskell2010

test-suite test-qrn
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          test-qrn.hs
  default-language: Haskell2010
  build-depends:    base == 4.*,
                    quantum-random-numbers,
                    hspec == 2.*,
                    QuickCheck == 2.*
